methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:3: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  var nb : Unit = 0
                  ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
  for (nb <- 1 to 4) {
          ^